tests/paczka1/small_fuzzy/63068979.err
Error in line 1: A560 A488 58,5
Error in line 6: LQot A488 34,7
